--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,8 @@
 name: Build & Release Windows x64 EXE
 
+permissions:
+  contents: write
+
 on:
   push:
     tags:
@@ -15,7 +18,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '22.5.1'
+          node-version: '20.x'
 
       - name: Install dependencies
         run: |
@@ -31,6 +34,12 @@ jobs:
       - name: Build Windows x64 EXE
         run: |
           npm run build:exe:win
+
+      - name: Upload artifact (exe)
+        uses: actions/upload-artifact@v4
+        with:
+          name: win-x64-exe
+          path: build/win-x64/showdog-api.exe
 
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v1
