--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,13 @@ jobs:
         run: |
           npm run build:exe:win
 
+      - name: Validate EXE exists
+        shell: pwsh
+        run: |
+          if (!(Test-Path 'build/win-x64/showdog-api.exe')) {
+            Write-Error 'Executable not found: build/win-x64/showdog-api.exe'
+          }
+
       - name: Upload artifact (exe)
         uses: actions/upload-artifact@v4
         with:
@@ -44,6 +51,8 @@ jobs:
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ github.ref_name }}
+          fail_on_unmatched_files: true
           files: |
             build/win-x64/showdog-api.exe
         env:
