--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fourmeme-parser-sdk",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Fourmeme Parser SDK - TypeScript Version (Internal Trading Only)",
   "main": "dist/lib.js",
   "types": "dist/lib.d.ts",
@@ -16,7 +16,7 @@
     "start:client": "node script/interactive-api-client.js",
     "quote:compare": "node script/quote-compare.js",
     "cleanup:src": "tsx scripts/cleanup_source.ts",
-    "build:exe:win": "pkg --targets node20-win-x64 --output build/win-x64/showdog-api.exe server-direct.js"
+    "build:exe:win": "pkg --targets node20-win-x64 --output build/win-x64/showdog-api.exe run.js"
   },
   "keywords": [
     "fourmeme",
@@ -53,9 +53,13 @@
     "node": ">=16.0.0"
   },
   "pkg": {
+    "scripts": [
+      "dist/**/*.js"
+    ],
     "assets": [
-      "dist/**/*",
-      "showdog-token-config.json"
+      "dist/**/*.json",
+      "showdog-token-config.json",
+      ".env.example"
     ]
   }
 }
